--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tesseract.js": "^5.0.4",
-    "react-webcam": "^7.2.0"
+    "react-webcam": "^7.2.0",
+    "qrcode.react": "^3.1.0",
+    "html5-qrcode": "^2.3.8",
+    "date-fns": "^2.30.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
