--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-webcam": "^7.2.0",
     "qrcode.react": "^3.1.0",
     "html5-qrcode": "^2.3.8",
-    "date-fns": "^2.30.0"
+    "date-fns": "^2.30.0",
+    "@tensorflow/tfjs": "^4.15.0",
+    "face-api.js": "^0.22.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
